# QuantumCosmicDetector

./: .gitignore  CMakeLists.txt  construction.cc  construction.hh  physics.cc  physics.hh  sim.cc
.github/workflows/: geant4-ci.yml
analysis/: analysis_cry.C
doc/: implementation.txt
docker/: Dockerfile  run_docker.sh
include/: PMActionInitialization.hh  PMDetectorConstruction.hh  PMPhysicsList.hh  PMPrimaryGenerator.hh  PMSensitiveDetector.hh  QDActionInitialization.hh  QDBarHit.hh  QDDetectorConstruction.hh  QDDetectorMessenger.hh  QDEventAction.hh  QDGeneratorBase.hh  QDPhysicsList.hh  QDPrimaryGenerator.hh  QDPrimaryGeneratorCRY.hh  QDPrimaryGeneratorMessenger.hh  QDRunAction.hh  QDSensitiveBarDetector.hh  QDSensitiveDetector.hh  QDSensitiveQPUDetector.hh  QDSensitiveSiPMDetector.hh
macros/: batch.mac  default.cry.setup  vis.mac
src/: PMActionInitialization.cc  PMDetectorConstruction.cc  PMPhysicsList.cc  PMPrimaryGenerator.cc  PMSensitiveDetector.cc  QDActionInitialization.cc  QDBarHit.cc  QDDetectorConstruction.cc  QDDetectorMessenger.cc  QDEventAction.cc  QDPhysicsList.cc  QDPrimaryGenerator.cc  QDPrimaryGeneratorCRY.cc  QDPrimaryGeneratorMessenger.cc  QDRunAction.cc  QDSensitiveBarDetector.cc  QDSensitiveDetector.cc  QDSensitiveQPUDetector.cc  QDSensitiveSiPMDetector.cc
